# sample-rust-app

./: Cargo.toml
.devcontainer/: devcontainer.json
src/: main.rs
