[package]
name = "sample-rust-app"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
lazy_static = "1.4"
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "http-proto", "reqwest-client"]  }
opentelemetry-semantic-conventions = { version = "0.13.0" }
opentelemetry-http = "0.10.0"
hyper = { version = "1.1.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
