[package]
name = "sample-rust-app"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.2.2"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.10.0" }
